[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialog_maker/scenes/DialoguePanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialog_maker/scripts/tree_editor/choice_editor.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.286275, 0.266667, 0.215686, 1 )

[node name="ChoiceEditor" type="PanelContainer"]
margin_right = 300.0
margin_bottom = 420.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 294.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="DialoguePanel" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 288.0
margin_bottom = 114.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 288.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_editor_description_": ""
}

[node name="ChoicesVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 288.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="AddChoiceButton" type="Button" parent="VBoxContainer"]
margin_left = 124.0
margin_top = 392.0
margin_right = 164.0
margin_bottom = 412.0
rect_min_size = Vector2( 40, 0 )
rect_pivot_offset = Vector2( 20, 10 )
size_flags_horizontal = 4
text = "+"
__meta__ = {
"_editor_description_": ""
}
[connection signal="dialogue_edited" from="VBoxContainer/DialoguePanel" to="." method="on_edit_question"]
[connection signal="pressed" from="VBoxContainer/AddChoiceButton" to="." method="add_choice"]
